fixed margin spacing bug in the results

--- a/css/main.css
+++ b/css/main.css
@@ -109,13 +109,11 @@ figure {
   float: left;
   display: inline-block;
   width: 49%;
-  margin-right: 1%;
+  height: 152px;
+  margin: 0 .5% 10px .5%;
   margin-bottom: 10px;
   border: 1px solid #000;
   clear: none; }
-
-figure:nth-child(2n+1) {
-  margin-right: 0; }
 
 figure img {
   width: 100px;
